--- a/package.json
+++ b/package.json
@@ -5,25 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "deploy": "node deploy-message.js && node index.js",
+    "status": "node -e \"console.log('🤖 Bot Status: Online\\n🕐 Uptime: ' + require('child_process').execSync('ps -o etime= -p $(pgrep -f node)').toString().trim() + '\\n💾 Memory: ' + (process.memoryUsage().rss / 1024 / 1024).toFixed(2) + ' MB')\""
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
     "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
-    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "pino": "^8.15.0",
-    "fs-extra": "^11.2.0",
     "moment": "^2.29.4",
-    "form-data": "^4.0.0",
-    "node-fetch": "^3.3.2",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "fluent-ffmpeg": "^2.1.2"
+    "figlet": "^1.6.0",
+    "chalk": "^4.1.2",
+    "boxen": "^7.0.0",
+    "gradient-string": "^2.0.2",
+    "ora": "^6.3.1"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": ["whatsapp", "bot", "baileys", "lord-rahl"],
+  "keywords": ["whatsapp", "bot", "deployment", "lord-rahl"],
   "author": "LORD RAHL"
 }
