--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "rahl-xmd-whatsapp-bot",
+  "name": "rahl-xmd-bot",
   "version": "1.0.0",
-  "description": "WhatsApp Bot by LORD RAHL",
+  "description": "RAHL XMD WhatsApp Bot by LORD RAHL",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "deploy": "node deploy-message.js && node index.js",
-    "status": "node -e \"console.log('🤖 Bot Status: Online\\n🕐 Uptime: ' + require('child_process').execSync('ps -o etime= -p $(pgrep -f node)').toString().trim() + '\\n💾 Memory: ' + (process.memoryUsage().rss / 1024 / 1024).toFixed(2) + ' MB')\""
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
     "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.3.1",
     "pino": "^8.15.0",
-    "moment": "^2.29.4",
-    "figlet": "^1.6.0",
-    "chalk": "^4.1.2",
-    "boxen": "^7.0.0",
-    "gradient-string": "^2.0.2",
-    "ora": "^6.3.1"
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.0"
   },
-  "keywords": ["whatsapp", "bot", "deployment", "lord-rahl"],
+  "keywords": ["whatsapp", "bot", "rahl-xmd", "lord-rahl"],
   "author": "LORD RAHL"
 }
