--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "qrcode-terminal": "^0.12.0",
     "pino": "^8.15.0",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "moment": "^2.29.4",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "os": "^0.1.2"
   },
   "keywords": ["whatsapp", "bot", "rahl-xmd", "lord-rahl"],
-  "author": "LORD RAHL"
+  "author": "LORD RAHL",
+  "license": "MIT"
 }
